--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,6 @@
     <string name="hint_address">Nhập địa chỉ giao hàng</string>
     <string name="hint_search_long">Nhập tên sách bạn muốn tìm</string>
     <string name="hint_search_short">Tìm kiếm</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
