need test sachActivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,5 @@
     <string name="desc_cart">Cart</string>
     <string name="tab_new">Mới Nhất</string>
     <string name="tab_popular">Thịnh Hành</string>
+    <string name="desc_logo">logo</string>
 </resources>
